--- a/movieland/templates/base.html
+++ b/movieland/templates/base.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MoveiLand</title>
+    {% block custom_css %}
+    {% endblock %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
     <div id="root"></div>
